fix: Convert n in paragraphs into <br> and code style auto wrap

--- a/src/assets/less/github-markdown.css
+++ b/src/assets/less/github-markdown.css
@@ -655,6 +655,8 @@
   word-wrap: normal;
   background-color: transparent;
   border: 0;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 .markdown-body .full-commit .btn-outline:not(:disabled):hover {
